infra/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  tls:
  - hosts: 
    - argocd.umgsocial.tech
    secretName: argocd-tls
  rules:
  - host: argocd.umgsocial.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-argo-cd-argocd-server
            port:
              name: https
