infra/monitor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - monitor.umgsocial.tech
    secretName: monitor-umgsocial-tech
  rules:
  - host: monitor.umgsocial.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
             number: 80
